# groll-dev

./: .gitignore  .pre-commit-config.yaml  LICENSE  pyproject.toml
src/groll/: __init__.py  __main__.py  groll.py
tests/: test_groll.py
