[tool.poetry]
name = "groll"
version = "0.0.1"
description = ""
authors = ["Krognak <69942446+Krognak@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "groll", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"

[tool.poetry.scripts]
groll = "groll.groll:cli"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1.2"
black = "^22.6.0"
flake8 = "^5.0.4"
pylint = "^2.14.5"
isort = "^5.10.1"
pre-commit = "^2.20.0"
mccabe = "^0.7.0"

[tool.pylint.similarities]
ignore-imports = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
